// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div>
  <div
    className="AppMenu-root-188"
  >
    <header
      className="MuiPaper-root-203 MuiPaper-elevation4-209 MuiAppBar-root-195 MuiAppBar-positionFixed-196 MuiAppBar-colorPrimary-201 mui-fixed"
    >
      <div
        className="MuiToolbar-root-230 MuiToolbar-regular-232 MuiToolbar-gutters-231 AppMenu-nowrap-190"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-240 MuiIconButton-root-234 MuiIconButton-colorInherit-235 AppMenu-menuButton-191"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-239"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-243"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-250"
          />
        </button>
        <h2
          className="MuiTypography-root-257 MuiTypography-title-263 MuiTypography-colorInherit-276 AppMenu-flex-189"
        >
          Point Pods
        </h2>
      </div>
    </header>
    <div
      className="AppMenu-spacer-193"
    />
  </div>
  <div
    className="NewTournament-center-187"
  >
    <div
      className="MuiPaper-root-203 MuiPaper-elevation1-206 MuiPaper-rounded-204 MuiCard-root-299 APIComponent-root-295"
    >
      <div
        className="MuiCardHeader-root-300"
      >
        <div
          className="MuiCardHeader-content-303"
        >
          <span
            className="MuiTypography-root-257 MuiTypography-headline-262 MuiCardHeader-title-304"
          >
            New Tournament
          </span>
        </div>
      </div>
      <hr
        className="MuiDivider-root-306"
      />
      <div
        className="MuiCardContent-root-310 APIComponent-content-296"
      >
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-311 MuiFormControl-marginDense-313 MuiFormControl-fullWidth-314 APIComponent-field-297"
        >
          <label
            className="MuiFormLabel-root-320 MuiInputLabel-root-315 MuiInputLabel-formControl-316 MuiInputLabel-animated-319 MuiInputLabel-marginDense-317"
            data-shrink={false}
            htmlFor="tournament-name"
          >
             Name
          </label>
          <div
            className="MuiInput-root-325 MuiInput-fullWidth-332 MuiInput-formControl-326 MuiInput-underline-329"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={true}
              className="MuiInput-input-333 MuiInput-inputMarginDense-334"
              defaultValue={undefined}
              disabled={false}
              id="tournament-name"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-311 MuiFormControl-marginDense-313 MuiFormControl-fullWidth-314 APIComponent-field-297"
        >
          <label
            className="MuiFormLabel-root-320 MuiInputLabel-root-315 MuiInputLabel-formControl-316 MuiInputLabel-animated-319 MuiInputLabel-marginDense-317"
            data-shrink={false}
            htmlFor="tournament-description"
          >
            Description
          </label>
          <div
            className="MuiInput-root-325 MuiInput-fullWidth-332 MuiInput-formControl-326 MuiInput-underline-329"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-333 MuiInput-inputMarginDense-334"
              defaultValue={undefined}
              disabled={false}
              id="tournament-description"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-311 MuiFormControl-marginDense-313 APIComponent-field-297"
        >
          <label
            className="MuiFormLabel-root-320 MuiInputLabel-root-315 MuiInputLabel-formControl-316 MuiInputLabel-animated-319 MuiInputLabel-marginDense-317"
            data-shrink={false}
            htmlFor="tournament-category"
          >
            Category
          </label>
          <div
            className="MuiInput-root-325 MuiInput-formControl-326 MuiInput-underline-329"
          >
            <div
              className="MuiSelect-root-338"
            >
              <div
                aria-haspopup="true"
                aria-owns={null}
                aria-pressed="false"
                className="MuiSelect-select-339 MuiSelect-selectMenu-340 MuiInput-input-333 MuiInput-inputMarginDense-334"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </div>
              <input
                autoComplete={undefined}
                autoFocus={undefined}
                defaultValue={undefined}
                id="tournament-category"
                name={undefined}
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                rows={undefined}
                type="hidden"
                value=""
              />
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-243 MuiSelect-icon-342"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-311 MuiFormControl-marginDense-313 APIComponent-field-297"
        >
          <label
            className="MuiFormLabel-root-320 MuiInputLabel-root-315 MuiInputLabel-formControl-316 MuiInputLabel-animated-319 MuiInputLabel-shrink-318 MuiInputLabel-marginDense-317"
            data-shrink={true}
            htmlFor="tournament-date"
          >
            Date
          </label>
          <div
            className="MuiInput-root-325 MuiInput-formControl-326 MuiInput-underline-329"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-333 MuiInput-inputType-336 MuiInput-inputMarginDense-334"
              defaultValue={undefined}
              disabled={false}
              id="tournament-date"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="date"
              value="2018-07-30"
            />
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-311 MuiFormControl-marginDense-313 APIComponent-field-297"
        >
          <label
            className="MuiFormLabel-root-320 MuiInputLabel-root-315 MuiInputLabel-formControl-316 MuiInputLabel-animated-319 MuiInputLabel-marginDense-317"
            data-shrink={false}
            htmlFor="tournament-pairingMethod"
          >
            Pairing Method
          </label>
          <div
            className="MuiInput-root-325 MuiInput-formControl-326 MuiInput-underline-329"
          >
            <div
              className="MuiSelect-root-338"
            >
              <div
                aria-haspopup="true"
                aria-owns={null}
                aria-pressed="false"
                className="MuiSelect-select-339 MuiSelect-selectMenu-340 MuiInput-input-333 MuiInput-inputMarginDense-334"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </div>
              <input
                autoComplete={undefined}
                autoFocus={undefined}
                defaultValue={undefined}
                id="tournament-pairingMethod"
                name={undefined}
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                rows={undefined}
                type="hidden"
                value=""
              />
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-243 MuiSelect-icon-342"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-311 MuiFormControl-marginDense-313 APIComponent-field-297"
        >
          <label
            className="MuiFormLabel-root-320 MuiInputLabel-root-315 MuiInputLabel-formControl-316 MuiInputLabel-animated-319 MuiInputLabel-marginDense-317"
            data-shrink={false}
            htmlFor="tournament-pairingMethodInitial"
          >
            Initial Pairing Method
          </label>
          <div
            className="MuiInput-root-325 MuiInput-formControl-326 MuiInput-underline-329"
          >
            <div
              className="MuiSelect-root-338"
            >
              <div
                aria-haspopup="true"
                aria-owns={null}
                aria-pressed="false"
                className="MuiSelect-select-339 MuiSelect-selectMenu-340 MuiInput-input-333 MuiInput-inputMarginDense-334"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </div>
              <input
                autoComplete={undefined}
                autoFocus={undefined}
                defaultValue={undefined}
                id="tournament-pairingMethodInitial"
                name={undefined}
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                rows={undefined}
                type="hidden"
                value=""
              />
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-243 MuiSelect-icon-342"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-311 MuiFormControl-marginDense-313 APIComponent-field-297"
        >
          <label
            className="MuiFormLabel-root-320 MuiInputLabel-root-315 MuiInputLabel-formControl-316 MuiInputLabel-animated-319 MuiInputLabel-marginDense-317"
            data-shrink={false}
            htmlFor="tournament-podSizeMinimum"
          >
            Minimum Pod Size
          </label>
          <div
            className="MuiInput-root-325 MuiInput-formControl-326 MuiInput-underline-329"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-333 MuiInput-inputType-336 MuiInput-inputMarginDense-334"
              defaultValue={undefined}
              disabled={false}
              id="tournament-podSizeMinimum"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="number"
              value=""
            />
          </div>
        </div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-311 MuiFormControl-marginDense-313 APIComponent-field-297"
        >
          <label
            className="MuiFormLabel-root-320 MuiInputLabel-root-315 MuiInputLabel-formControl-316 MuiInputLabel-animated-319 MuiInputLabel-marginDense-317"
            data-shrink={false}
            htmlFor="tournament-podSizeMaximum"
          >
            Maximum Pod Size
          </label>
          <div
            className="MuiInput-root-325 MuiInput-formControl-326 MuiInput-underline-329"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-333 MuiInput-inputType-336 MuiInput-inputMarginDense-334"
              defaultValue={undefined}
              disabled={false}
              id="tournament-podSizeMaximum"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
      <hr
        className="MuiDivider-root-306"
      />
      <div
        className="MuiCardActions-root-345"
      >
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-311 MuiFormControl-marginDense-313 MuiCardActions-action-346"
        >
          <label
            className="MuiFormLabel-root-320 MuiInputLabel-root-315 MuiInputLabel-formControl-316 MuiInputLabel-animated-319 MuiInputLabel-marginDense-317"
            data-shrink={false}
            htmlFor="tournament-newCategory"
          >
            Add Category
          </label>
          <div
            className="MuiInput-root-325 MuiInput-formControl-326 MuiInput-underline-329"
          >
            <input
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-333 MuiInput-inputMarginDense-334"
              defaultValue={undefined}
              disabled={false}
              id="tournament-newCategory"
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <button
          aria-label="Add Category"
          className="MuiButtonBase-root-240 MuiIconButton-root-234 MuiCardActions-action-346"
          disabled={false}
          id="tournament-newCategory-add"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-239"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-243"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-250"
          />
        </button>
        <button
          aria-label="Create"
          className="MuiButtonBase-root-240 MuiButton-root-347 MuiButton-text-349 MuiButton-flat-352 APIComponent-right-298 MuiCardActions-action-346"
          disabled={false}
          id="tournament-submit"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-348"
          >
            Create
          </span>
          <span
            className="MuiTouchRipple-root-250"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div>
  <div
    className="AppMenu-root-188"
  >
    <header
      className="MuiPaper-root-203 MuiPaper-elevation4-209 MuiAppBar-root-195 MuiAppBar-positionFixed-196 MuiAppBar-colorPrimary-201 mui-fixed"
    >
      <div
        className="MuiToolbar-root-230 MuiToolbar-regular-232 MuiToolbar-gutters-231 AppMenu-nowrap-190"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-240 MuiIconButton-root-234 MuiIconButton-colorInherit-235 AppMenu-menuButton-191"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-239"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-243"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-250"
          />
        </button>
        <h2
          className="MuiTypography-root-257 MuiTypography-title-263 MuiTypography-colorInherit-276 AppMenu-flex-189"
        >
          Point Pods
        </h2>
      </div>
    </header>
    <div
      className="AppMenu-spacer-193"
    />
  </div>
  <a
    aria-label="Start Tournament"
    className="MuiButtonBase-root-240 MuiButton-root-347 MuiButton-fab-362 MuiButton-contained-356 MuiButton-containedSecondary-358 MuiButton-raised-359 MuiButton-raisedSecondary-361 NewTournament-actionButton-186"
    href="/tournament/mock1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-348"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-243"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-250"
    />
  </a>
  <div>
    <div
      className="MuiToolbar-root-230 MuiToolbar-regular-232 MuiToolbar-gutters-231"
    >
      <h1
        className="MuiTypography-root-257 MuiTypography-headline-262"
      >
        Add Players
      </h1>
      <p
        className="MuiTypography-root-257 MuiTypography-body1-266"
      />
      <button
        aria-haspopup="true"
        aria-label="Players Menu"
        aria-owns={null}
        className="MuiButtonBase-root-240 MuiButton-root-347 MuiButton-text-349 MuiButton-flat-352 APIComponent-right-371"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-348"
        >
          0 Players
        </span>
        <span
          className="MuiTouchRipple-root-250"
        />
      </button>
    </div>
    <div
      className="APIComponent-addPlayer-372"
    >
      <div
        className="IntegrationAutosuggest-root-374"
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-owns="react-autowhatever-1"
          className="IntegrationAutosuggest-container-375"
          role="combobox"
        >
          <div
            aria-describedby={undefined}
            className="MuiFormControl-root-311 MuiFormControl-fullWidth-314"
          >
            <div
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls="react-autowhatever-1"
              className="MuiInput-root-325 MuiInput-fullWidth-332 MuiInput-formControl-326 MuiInput-underline-329"
              style={Object {}}
            >
              <input
                aria-invalid={false}
                autoComplete="off"
                autoFocus={undefined}
                className="MuiInput-input-333"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={undefined}
                placeholder="Add a player"
                readOnly={undefined}
                required={false}
                rows={undefined}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="MuiPaper-root-203 MuiPaper-elevation2-207"
            id="react-autowhatever-1"
            role="listbox"
            style={Object {}}
          />
        </div>
        <button
          className="MuiButtonBase-root-240 MuiIconButton-root-234 MuiIconButton-colorInherit-235"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-239"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-243"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-250"
          />
        </button>
      </div>
    </div>
    <div
      className="APIComponent-list-373"
    >
      <ul
        className="MuiList-root-379 MuiList-padding-380"
      />
    </div>
  </div>
</div>
`;
